[package]
name = "DirGuardian"
version = "1.0.0"
authors = ["RonaldColyar <thebest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json  = "*"
ansi_term = "0.12"
rand = "0.8.3"
encryptfile = "0.1.3"
queues = "1.1.0"
uuid = {version = "0.8", features = ["v4"] }
openssl = "0.10.28"